voronoi_mesh files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,9 @@ set(SOURCES ${CMAKE_SOURCE_DIR}/external/glad/src/glad.c
         include/madoc/log_utils.h
         src/log_utils.cpp
         src/voronoi.cpp
-        include/madoc/voronoi.h)
+        include/madoc/voronoi.h
+        src/voronoi_mesh.cpp
+        include/madoc/voronoi_mesh.h)
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
